RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/09_0001/09_merged.txt
/home/dimpling/AutoSpec/out/09_0001/09_merged.c:20:24: error: unterminated comment
   20 |   loop invariant true; /* No information about the loop condition or variables affected */;
      |                        ^
